--- a/k8s/node all/worker-node3/install-worker-node2.yaml
+++ b/k8s/node all/worker-node3/install-worker-node2.yaml
@@ -10,32 +10,11 @@ echo "192.168.200.236 worker-node2 worker2" | sudo tee -a /etc/hosts
 echo "192.168.200.237 worker-node3 worker3" | sudo tee -a /etc/hosts
 
 # Install dependencies
-sudo yum install -y nano
-sudo yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
-sudo yum install -y yum-utils containerd.io && rm -I /etc/containerd/config.toml
-sudo systemctl enable containerd && sudo systemctl start containerd
-
-# Check containerd status
-sudo systemctl status containerd
-
-# Add Kubernetes repository
-sudo tee /etc/yum.repos.d/kubernetes.repo <<EOF
-[kubernetes]
-name=Kubernetes
-baseurl=https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64
-enabled=1
-gpgcheck=1
-repo_gpgcheck=1
-gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-EOF
-
-# Install Kubernetes components
-sudo yum install -y kubelet kubectl kubeadm
-
+sudo yum install -y nano yum-utils
+sudo yum update -y
 # Disable swap
 sudo sed -i '/swap/d' /etc/fstab
 sudo swapoff -a
-
 
 # Disable SELinux
 sudo setenforce 0
@@ -52,14 +31,33 @@ sudo modprobe br_netfilter
 echo 'net.ipv4.ip_forward = 1' | sudo tee -a /etc/sysctl.conf
 sudo sysctl --system
 
-
 # For Worker Nodes worker
 # sudo firewall-cmd --permanent --add-port=10251/tcp
 # sudo firewall-cmd --permanent --add-port=10255/tcp
 # sudo firewall-cmd --reload
-
 sudo systemctl stop firewalld
 sudo systemctl disable firewalld
+
+# conatinerd
+sudo yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+sudo yum install -y containerd.io && rm -I /etc/containerd/config.toml
+
+sudo systemctl enable containerd && sudo systemctl start containerd
+sudo systemctl status containerd
+
+# Add Kubernetes repository
+sudo tee /etc/yum.repos.d/kubernetes.repo <<EOF
+[kubernetes]
+name=Kubernetes
+baseurl=https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64
+enabled=1
+gpgcheck=1
+repo_gpgcheck=1
+gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+EOF
+
+# Install Kubernetes components
+sudo yum install -y kubelet kubectl kubeadm
 
 # Initialize Kubernetes cluster
 ## sudo kubeadm init --pod-network-cidr=172.24.199.0/24
